# ModernGame

./: Adventure.cpp  Adventure.h  CMakeLists.txt  README.md  main.cpp
Areas/: Area.cpp  Area.h  BanditArea.cpp  BanditArea.h  CaveArea.cpp  CaveArea.h  StarterArea.cpp  StarterArea.h
Bosses/: CaveTroll.cpp  CaveTroll.h  Necromancer.cpp  Necromancer.h
Characters/: Character.cpp  Character.h  Enemy.cpp  Enemy.h  Player.cpp  Player.h
Items/: Armor.cpp  Armor.h  Consumeable.cpp  Consumeable.h  Item.cpp  Item.h  Weapon.cpp  Weapon.h
Misc/: Attack.cpp  Attack.h  Battle.cpp  Battle.h  Itemlist.cpp  Itemlist.h  equippedArmor.cpp  equippedArmor.h
Tweaks/: Attack.h
